Added medicaton/prescription , some hacks still in place (tm)
